Rework scheduled broadcasts and scheduled trigger editing to share same form (WIP)

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-16 20:15+0000\n"
+"POT-Creation-Date: 2021-06-18 17:44+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Moy Moussan <moymoussan@gmail.com>, 2021\n"
 "Language-Team: Spanish (https://www.transifex.com/rapidpro/teams/226/es/)\n"
@@ -3821,22 +3821,35 @@ msgstr "cada semana en %(daysofweek)s"
 msgid "each month on the %(dayofmonth)s"
 msgstr "cada mes en el %(dayofmonth)s"
 
-#, python-format
-msgid "%(day)s is not a valid day of the week"
-msgstr "%(day)s no es un día válido de la semana"
+msgid "Start Time"
+msgstr "Hora de inicio"
 
-msgid "Must specify at least one day of the week"
-msgstr "Debe especificar al menos un día de la semana"
+#, fuzzy
+#| msgid "Select a field to update"
+msgid "Select a date and time"
+msgstr "Seleccione un campo para actualizar"
+
+#, fuzzy
+#| msgid "not repeat"
+msgid "Repeat"
+msgstr "no repetir"
+
+#, fuzzy
+#| msgid "repeats daily"
+msgid "Repeat Days"
+msgstr "se repite a diario"
 
 msgid "Select days to repeat on"
 msgstr "Seleccionar días para repetir"
 
-msgid " "
-msgstr " "
-
 #, python-format
-msgid "%s Time Zone"
-msgstr "%s Zona horaria"
+msgid "First time this should happen in the %s timezone."
+msgstr ""
+
+#, fuzzy
+#| msgid "Must specify at least one day of the week"
+msgid "Must specify at least one day of the week."
+msgstr "Debe especificar al menos un día de la semana"
 
 msgid "English"
 msgstr "Inglés"
@@ -4111,11 +4124,21 @@ msgstr[1] "Respuestas"
 msgid "The message to send in response after they join the group (optional)"
 msgstr "El mensaje para enviar como respuesta después de unirse al grupo (opcional)"
 
-msgid "Start Time"
-msgstr "Hora de inicio"
+#, fuzzy
+#| msgid "Group to Join"
+msgid "Contacts To Include"
+msgstr "Grupo para participar"
 
-msgid "The groups and contacts the flow will be broadcast to"
-msgstr "Los grupos y contactos al que se comunicará el flujo"
+msgid "Additional specific contacts to include."
+msgstr ""
+
+#, fuzzy
+#| msgid "Optional: Trigger only applies to these groups"
+msgid "Optional: Select contacts"
+msgstr "Opcional: el activador solo se aplica a estos grupos"
+
+msgid "Must provide at least one group or contact to include."
+msgstr ""
 
 msgid "The channel to apply this trigger to, leave blank for all Facebook channels"
 msgstr "El canal al que aplicar este activador, déjelo en blanco para todos los canales de Facebook"
@@ -4134,9 +4157,6 @@ msgstr "Palabra clave para participar"
 
 msgid "The first word of the message"
 msgstr "La primera palabra del mensaje"
-
-msgid "Create Schedule"
-msgstr "Crear Cronograma"
 
 msgid "Create Referral Trigger"
 msgstr "Crear Activador de Referencias"
@@ -7908,6 +7928,23 @@ msgstr "Las plantillas se sincronizan desde su cuenta de WhatsApp cada 15 minuto
 
 msgid "No synced templates at this time."
 msgstr "No hay plantillas sincronizadas en este momento."
+
+#, python-format
+#~ msgid "%(day)s is not a valid day of the week"
+#~ msgstr "%(day)s no es un día válido de la semana"
+
+#~ msgid " "
+#~ msgstr " "
+
+#, python-format
+#~ msgid "%s Time Zone"
+#~ msgstr "%s Zona horaria"
+
+#~ msgid "The groups and contacts the flow will be broadcast to"
+#~ msgstr "Los grupos y contactos al que se comunicará el flujo"
+
+#~ msgid "Create Schedule"
+#~ msgstr "Crear Cronograma"
 
 #, fuzzy
 #~| msgid "Unable to check WhatsApp enterprise account, please check username and password"
