--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-16 20:15+0000\n"
+"POT-Creation-Date: 2021-06-18 17:44+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Ilhasoft <contato@ilhasoft.com.br>, 2021\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/rapidpro/teams/226/pt_BR/)\n"
@@ -3827,22 +3827,35 @@ msgstr "cada semana em %(daysofweek)s"
 msgid "each month on the %(dayofmonth)s"
 msgstr "cada mês no %(dayofmonth)s"
 
-#, python-format
-msgid "%(day)s is not a valid day of the week"
-msgstr "%(day)snão é um dia válido da semana "
+msgid "Start Time"
+msgstr "Tempo de Início"
 
-msgid "Must specify at least one day of the week"
-msgstr "Ao menos um dia da semana deve ser especificado"
+#, fuzzy
+#| msgid "Select a field to update"
+msgid "Select a date and time"
+msgstr "Selecione um campo para atualizar"
+
+#, fuzzy
+#| msgid "not repeat"
+msgid "Repeat"
+msgstr "não repetir"
+
+#, fuzzy
+#| msgid "repeats daily"
+msgid "Repeat Days"
+msgstr "repetir diariamente"
 
 msgid "Select days to repeat on"
 msgstr "Selecione os dias para se repetir"
 
-msgid " "
-msgstr " "
-
 #, python-format
-msgid "%s Time Zone"
-msgstr "%s Fuso Horário"
+msgid "First time this should happen in the %s timezone."
+msgstr ""
+
+#, fuzzy
+#| msgid "Must specify at least one day of the week"
+msgid "Must specify at least one day of the week."
+msgstr "Ao menos um dia da semana deve ser especificado"
 
 msgid "English"
 msgstr "Inglês"
@@ -4117,11 +4130,21 @@ msgstr[1] "Respostas"
 msgid "The message to send in response after they join the group (optional)"
 msgstr "A mensagem para enviar em resposta após se juntar ao grupo (opcional)"
 
-msgid "Start Time"
-msgstr "Tempo de Início"
+#, fuzzy
+#| msgid "Group to Join"
+msgid "Contacts To Include"
+msgstr "Grupos para participar"
 
-msgid "The groups and contacts the flow will be broadcast to"
-msgstr "Os grupos e contatos para os quais o fluxo será distribuído"
+msgid "Additional specific contacts to include."
+msgstr ""
+
+#, fuzzy
+#| msgid "Optional: Trigger only applies to these groups"
+msgid "Optional: Select contacts"
+msgstr "Opcional: Disparadores se aplicam somente à estes grupos"
+
+msgid "Must provide at least one group or contact to include."
+msgstr ""
 
 msgid "The channel to apply this trigger to, leave blank for all Facebook channels"
 msgstr "O canal para aplicar esse gatilho,  ou deixe em branco para todos os canais do Facebook"
@@ -4140,9 +4163,6 @@ msgstr "Juntar palavra-chave"
 
 msgid "The first word of the message"
 msgstr "A primeira palavra da mensagem"
-
-msgid "Create Schedule"
-msgstr "Criar agendamento"
 
 msgid "Create Referral Trigger"
 msgstr "Criar Disparador de Referência"
@@ -7895,6 +7915,23 @@ msgstr "Templates são sincronizados da sua conta do WhatsApp a cada 15 minutos.
 
 msgid "No synced templates at this time."
 msgstr "Sem templates sincronizados neste momento."
+
+#, python-format
+#~ msgid "%(day)s is not a valid day of the week"
+#~ msgstr "%(day)snão é um dia válido da semana "
+
+#~ msgid " "
+#~ msgstr " "
+
+#, python-format
+#~ msgid "%s Time Zone"
+#~ msgstr "%s Fuso Horário"
+
+#~ msgid "The groups and contacts the flow will be broadcast to"
+#~ msgstr "Os grupos e contatos para os quais o fluxo será distribuído"
+
+#~ msgid "Create Schedule"
+#~ msgstr "Criar agendamento"
 
 #, fuzzy
 #~| msgid "Unable to check WhatsApp enterprise account, please check username and password"
