--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-16 20:15+0000\n"
+"POT-Creation-Date: 2021-06-18 17:44+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -3829,22 +3829,35 @@ msgstr "каждую неделю в %(daysofweek)s"
 msgid "each month on the %(dayofmonth)s"
 msgstr "каждый месяц %(dayofmonth)s-го"
 
-#, python-format
-msgid "%(day)s is not a valid day of the week"
-msgstr "%(day)s не является действительным днем ​​недели"
+msgid "Start Time"
+msgstr ""
 
-msgid "Must specify at least one day of the week"
-msgstr "Необходимо указать хотя бы один день недели"
+#, fuzzy
+#| msgid "Select the event type"
+msgid "Select a date and time"
+msgstr "Выберите тип события"
+
+#, fuzzy
+#| msgid "not repeat"
+msgid "Repeat"
+msgstr "не будет повторяться"
+
+#, fuzzy
+#| msgid "repeats daily"
+msgid "Repeat Days"
+msgstr "повторяется ежедневно"
 
 msgid "Select days to repeat on"
 msgstr ""
 
-msgid " "
+#, python-format
+msgid "First time this should happen in the %s timezone."
 msgstr ""
 
-#, python-format
-msgid "%s Time Zone"
-msgstr ""
+#, fuzzy
+#| msgid "Must specify at least one day of the week"
+msgid "Must specify at least one day of the week."
+msgstr "Необходимо указать хотя бы один день недели"
 
 msgid "English"
 msgstr "Английский"
@@ -4119,11 +4132,21 @@ msgstr[3] "Ответы"
 msgid "The message to send in response after they join the group (optional)"
 msgstr "Ответное сообщение для отправки после того, как они присоединятся к группе (опционально)"
 
-msgid "Start Time"
+#, fuzzy
+#| msgid "Group to Join"
+msgid "Contacts To Include"
+msgstr "Группа для Присоединения"
+
+msgid "Additional specific contacts to include."
 msgstr ""
 
-msgid "The groups and contacts the flow will be broadcast to"
-msgstr "Группы и контакты, которым поток будет осуществлять рассылку"
+#, fuzzy
+#| msgid "Recipients, enter contacts or groups"
+msgid "Optional: Select contacts"
+msgstr "Получатели, введите контакты или группы"
+
+msgid "Must provide at least one group or contact to include."
+msgstr ""
 
 msgid "The channel to apply this trigger to, leave blank for all Facebook channels"
 msgstr "Канал, к которому применить этот триггер, оставьте пустым для охвата всех каналов Facebook"
@@ -4142,9 +4165,6 @@ msgstr "Присоединить ключевое слово"
 
 msgid "The first word of the message"
 msgstr "Первое слово сообщения"
-
-msgid "Create Schedule"
-msgstr "Создать Расписание"
 
 msgid "Create Referral Trigger"
 msgstr "Создать Реферальный Триггер"
@@ -7751,6 +7771,16 @@ msgstr "Шаблоны синхронизируются с Вашей учетн
 
 msgid "No synced templates at this time."
 msgstr "На данный момент синхронизированные шаблоны отсутствуют."
+
+#, python-format
+#~ msgid "%(day)s is not a valid day of the week"
+#~ msgstr "%(day)s не является действительным днем ​​недели"
+
+#~ msgid "The groups and contacts the flow will be broadcast to"
+#~ msgstr "Группы и контакты, которым поток будет осуществлять рассылку"
+
+#~ msgid "Create Schedule"
+#~ msgstr "Создать Расписание"
 
 #, fuzzy
 #~| msgid "Unable to check WhatsApp enterprise account, please check username and password"
