--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-30 22:01+0000\n"
+"POT-Creation-Date: 2021-07-01 00:15+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Jesus EKIE <jesus@fehudigital.com>, 2020\n"
 "Language-Team: French (https://www.transifex.com/rapidpro/teams/226/fr/)\n"
@@ -7736,6 +7736,11 @@ msgstr "Service de billetterie"
 
 msgid "Ticketing Service over"
 msgstr "Service de billetterie terminé"
+
+#, fuzzy
+#| msgid "Tickets"
+msgid "My Tickets"
+msgstr "Billets"
 
 msgid "Services"
 msgstr "Services"
