--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-30 22:01+0000\n"
+"POT-Creation-Date: 2021-07-01 00:15+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Ilhasoft <contato@ilhasoft.com.br>, 2021\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/rapidpro/teams/226/pt_BR/)\n"
@@ -7741,6 +7741,11 @@ msgstr "Serviço de Ticket"
 
 msgid "Ticketing Service over"
 msgstr "Serviço de Ticket sobre"
+
+#, fuzzy
+#| msgid "Tickets"
+msgid "My Tickets"
+msgstr "Tickets"
 
 msgid "Services"
 msgstr "Serviços"
