--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-07-01 20:07+0000\n"
+"POT-Creation-Date: 2021-07-05 16:25+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Ilhasoft <contato@ilhasoft.com.br>, 2021\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/rapidpro/teams/226/pt_BR/)\n"
@@ -3343,6 +3343,24 @@ msgstr "Senha incorreta."
 #, python-brace-format
 msgid "Deleted user {username}"
 msgstr "Usuário Deletado {username}"
+
+#, fuzzy
+#| msgid "Alert Email"
+msgid "Your Email"
+msgstr "Alerta de e-mail"
+
+#, fuzzy
+#| msgid "POST Required"
+msgid "Password Recovery"
+msgstr "POST obrigatório"
+
+msgid "An Email has been sent to your account with further instructions."
+msgstr ""
+
+#, fuzzy
+#| msgid "POST Required"
+msgid "Password Recovery Request"
+msgstr "POST obrigatório"
 
 msgid "First Name"
 msgstr "Primeiro nome"
@@ -6689,6 +6707,52 @@ msgstr ""
 "Nome: %(cc_name)s\n"
 "Cartão de crédito: %(cc_type)s X%(cc_last4)s\n"
 "\n"
+
+#, python-format
+msgid ""
+"\n"
+"\n"
+"<br/>\n"
+"Hi from %(hostname)s,\n"
+"<br/>\n"
+"<br/>\n"
+"Someone has requested that the password for this email address be reset.\n"
+"<br/>\n"
+"<br/>\n"
+"Clicking on the following link will allow you to reset the password for the account %(account_name)s:\n"
+"<br/>\n"
+"<a href='%(brand_link)s%(path)s'>Reset password</a>.\n"
+"<br/>\n"
+"<br/>\n"
+"If you did not request this, don't worry, this email has only been sent to you and your account remains secure.\n"
+"<br/>\n"
+"Thank you.\n"
+"<br/>\n"
+"<br/>\n"
+"Please do not reply to this email.\n"
+"<br/>\n"
+"<br/>\n"
+msgstr ""
+
+#, python-format
+msgid ""
+"\n"
+"\n"
+"Hi from %(hostname)s,\n"
+"\n"
+"Someone has requested that the password for this email address be reset.\n"
+"\n"
+"Clicking on the following link will allow you to reset the password for the account %(account_name)s:\n"
+"\n"
+"%(brand_link)s%(path)s\n"
+"\n"
+"If you did not request this, don't worry, this email has only been sent to you and your account remains secure.\n"
+"\n"
+"Thank you.\n"
+"\n"
+"Please do not reply to this email.\n"
+"\n"
+msgstr ""
 
 #, fuzzy, python-format
 #| msgid "A connection to a Twilio account is required"
